--- a/Majestic Cabinets/about.html
+++ b/Majestic Cabinets/about.html
@@ -22,7 +22,7 @@
             <nav>
                 <div class="row">
                     <div class="logo-column">
-                        <img src="/Images/logo.png">
+                        <img src="Images/logo.png">
                     </div>
                     <div class="contact-column">
                         <a href="tel:1-702-457-1158" class="phone"><i class="fa-solid fa-phone"></i>1-702-457-1158</a>
@@ -40,7 +40,7 @@
     <!--SLIDER SECTION-->
     <section class="slider-section">
         <div class="item">
-            <img src="/Images/About-Page/Banner-img.jpg">
+            <img src="Images/About-Page/Banner-img.jpg">
             <div class="caption">
                 <h1>About Us</h1>
                 <p>Home / About</p>
@@ -74,7 +74,7 @@
                 </p>
             </div>
             <div class="image">
-                <img src="/Images/About-Page/Header2-img.jpg" alt="" class="header-2-image">
+                <img src="Images/About-Page/Header2-img.jpg" alt="" class="header-2-image">
             </div>
         </div>
     </section>
@@ -82,10 +82,10 @@
 
     <!-- CARDS SECTION -->
     <section class="cards-section">
-        <img src="/Images/About-Page/cards-bg-image.jpg" alt="" class="cards-bg-image">
+        <img src="Images/About-Page/cards-bg-image.jpg" alt="" class="cards-bg-image">
         <div class="cards-grid">
             <div class="card">
-                <div class="card-icons"><img src="/Images/About-Page/Cards-icons/card-icon1.png" alt="">
+                <div class="card-icons"><img src="Images/About-Page/Cards-icons/card-icon1.png" alt="">
                     <h2>design</h2>
                 </div>
                 <div class="card-caption">
@@ -98,7 +98,7 @@
                 </div>
             </div>
             <div class="card">
-                <div class="card-icons"><img src="/Images/About-Page/Cards-icons/card-icon2.png" alt="">
+                <div class="card-icons"><img src="Images/About-Page/Cards-icons/card-icon2.png" alt="">
                     <h2>custom</h2>
                 </div>
                 <div class="card-caption">
@@ -110,7 +110,7 @@
                 </div>
             </div>
             <div class="card">
-                <div class="card-icons"><img src="/Images/About-Page/Cards-icons/card-icon3.png" alt="">
+                <div class="card-icons"><img src="Images/About-Page/Cards-icons/card-icon3.png" alt="">
                     <h2>sales</h2>
                 </div>
                 <div class="card-caption">
@@ -176,28 +176,28 @@
 
                 <!-- <img src="/Images/About-Page/blog-bg-img.jpg" alt="" class="blog-bg-img"> -->
                 <div class="bottom-card">
-                    <div class="card-icons"><img src="/Images/About-Page/Blog-Section-icons/icon1.png" alt=""></div>
+                    <div class="card-icons"><img src="Images/About-Page/Blog-Section-icons/icon1.png" alt=""></div>
                     <div class="card-caption">
                         <h2>Questions</h2>
                         <p>Many customers ask questions about the process of getting Custom Cabinets or Refinished
                             Cabinets. We can answer those! We want you to feel comfortable with the process leading up
-                            to the beautiful final results Majestic Cabinets will give you.
+                            to the beautiful final results, Majestic Cabinets will give you.
                         </p>
                     </div>
                 </div>
                 <div class="bottom-card">
-                    <div class="card-icons"><img src="/Images/About-Page/Blog-Section-icons/icon2.png" alt=""></div>
+                    <div class="card-icons"><img src="Images/About-Page/Blog-Section-icons/icon2.png" alt=""></div>
                     <div class="card-caption">
                         <h2>Maintenance</h2>
                         <p>Sometimes after your Majestic Cabinets are finished you can over time notice some wear on
-                            those high traffic used cabinets where those special snacks are kept. It's always a good
-                            idea to take care of those cabinets sooner than later and we will help you take care of
+                            those high-traffic used cabinets where those special snacks are kept. It's always a good
+                            idea to take care of those cabinets sooner rather than later and we will help you take care of
                             that.
                         </p>
                     </div>
                 </div>
                 <div class="bottom-card">
-                    <div class="card-icons"><img src="/Images/About-Page/Blog-Section-icons/icon3.png" alt=""></div>
+                    <div class="card-icons"><img src="Images/About-Page/Blog-Section-icons/icon3.png" alt=""></div>
                     <div class="card-caption">
                         <h2>State Contractor License:<br>B2 #0079140 & C-3B #0068142</h2>
                         <p>We have all of our business and contractor licenses so you know we give the best quality
@@ -241,7 +241,7 @@
                 </div>
             </div>
             <div class="contact">
-                <p>If there is something specific your looking for that you are unable to locate from Majestic Cabinets
+                <p>If there is something specific you are looking for that you are unable to locate from Majestic Cabinets
                     please contact us by phone or email... </p>
                 <ul class="contact-details">
                     <li><a href="tel:"><strong>Phone:</strong> +1 702-457-1158</a></li>
