Education Website Update

--- a/Edison/index.html
+++ b/Edison/index.html
@@ -34,8 +34,8 @@
   <link rel="icon" href="Assests/images/logo.png" sizes="192x192" />
 
   <!-- CUSTOM CSS -->
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="responsive.css">
+  <link rel="stylesheet" href="Assests/css/style.css">
+  <link rel="stylesheet" href="Assests/css/responsive.css">
 </head>
 
 <body>
